apps/influxdb/influxdb-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    app.kubernetes.io/part-of: observability
    argocd.argoproj.io/managed-by: argocd
