apps/influxdb/influxdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app: influxdb
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: observability
    argocd.argoproj.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: influxdb
